--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,26 @@
-*
-{
+* {
     margin: 0;
     padding: 0;
 }
 
-.webgl
-{
+.webgl {
     position: fixed;
     top: 0;
     left: 0;
     outline: none;
 }
 
+.home {
+    position: fixed;
+    z-index: 1;
+    padding: 1rem;
+    top: 90%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: none;
+}
+
 html,
-body
-{
+body {
     overflow: hidden;
 }
