--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,36 @@
     cursor: pointer;
 }
 
-html,
+/*html,
 body {
     overflow: hidden;
+}*/
+
+#leftDoor {
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+}
+
+#rightDoor {
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+}
+
+#billBoard {
+    width: 100%;
+    display: none;
+    position: absolute;
+    z-index: 1;
+    justify-content: center;
+    text-align: center;
+}
+
+#billBoard img {
+    width: 75%;
+    margin: auto;
+    display: block;
 }
