changed safari offset to just move 3d position

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
     padding: 0;
 }
 
+
 .webgl {
     position: fixed;
     top: 0;
@@ -24,6 +25,10 @@
 html,
 body {
     overflow: hidden;
+}
+
+body {
+    margin: 0;
 }
 
 #css {
