--- a/src/style.css
+++ b/src/style.css
@@ -74,3 +74,10 @@ body {
     z-index: 1;
     display: none;
 }
+
+#qr {
+    position: fixed;
+    //z-index: 2;
+    width: 100%;
+    height: auto;
+}
