--- a/src/style.css
+++ b/src/style.css
@@ -81,6 +81,7 @@ body {
     position: absolute;
     top: 50%;
     transform: translateY(-50%)!important;
+    pointer-events: none;
 }
 
 #scanner {
